# CLM

./: .flake8  .gitignore  .pre-commit-config.yaml  environment.yml  genindex.html  index.html  modules.html  py-modindex.html  pyproject.toml  requirements.txt  search.html  setup.sh
clm/: installation.html  workflow.html  workflow_steps.html
docs/: index.rst
scripts/: add_fingerprints.py
sh/: create-env-clm.sh  rsync-della.sh  run-clm-array.sh  run-tests.sh  submit-clm-array.sh  submit-clm-batch-tmux.sh  submit-clm.sh  summarize-slurm-logs.sh  write-grid-v0-S4.py  write-grid-v0-cluster.py  write-grid-v0.py  write-grid.py
sh/grids/: clm_v0-S4.txt  clm_v0-cluster.txt  clm_v0.txt  config_bsm.yaml  grid_bsm_AL.txt
sh/grids/clm_v0-S4/: bsm-2m-AL-step0-gt_0_5-model_type=S4.json  bsm-2m-AL-step0-gt_0_8-model_type=S4.json  bsm-2m-AL-step0-gt_0_99-model_type=S4.json  bsm-2m-AL-step7-gt_0_5-model_type=S4.json  bsm-2m-AL-step7-gt_0_8-model_type=S4.json  bsm-2m-AL-step7-gt_0_99-model_type=S4.json  bsm-2m-gt_0-model_type=S4.json  bsm-2m-gt_0_5-model_type=S4.json  bsm-2m-gt_0_8-model_type=S4.json  bsm-2m-gt_0_9-model_type=S4.json  bsm-2m-gt_0_95-model_type=S4.json  bsm-2m-gt_0_99-model_type=S4.json  bsm-train-model_type=S4.json  hmdb4-chemex-model_type=S4.json  hmdb4-deepmet-model_type=S4.json  (+1 more)
src/: clm.commands.html  clm.data.html  clm.html  clm.plot.html  clm.util.html  modules.html
src/clm/: datasets.py  functions.py  loggers.py  models.py
tests/: test_functions.py  test_model_evaluation.py  test_snakemake_steps.py
tests/test_data/: clean_smiles.csv
workflow/: Snakefile  Snakefile_data
workflow/config/: config-massspecgym.yaml  config-spectraverse-allv1-s4_cv.yaml  config-spectraverse-allv1-transformer_cv.yaml  config.yaml  config_bsm.yaml  config_fast.yaml  config_per_fold_aug.yaml
(+98 files in other folders)
