[build-system]
requires = ["setuptools>=61.0", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "skinniderlab-clm"
authors = [
  {name="Michael Skinnider", email="skinnider@princeton.edu"}
]
description = "NPS-generation is a tool to train and evaluate deep generative models of novel psychoactive substances"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
]

dependencies = [
    "deepsmiles",
    "einops",
    "fcd_torch",
    "numpy",
    "opt_einsum",
    "pandas",
    "pulp<2.8.0",
    "rdkit",
    "s4dd @ git+https://github.com/GuptaVishu2002/s4-for-de-novo-drug-design.git@fix-module-library-packaging",
    "safari @ git+https://github.com/GuptaVishu2002/safari.git@fix-setup",
    "scikit-learn",
    "scipy==1.11.1",
    "selfies",
    "hydra-core",
    "pytorch-lightning",
    # snakemake->stopit needs pkg_resources, but is failing
    # to specify setuptools as a dependency
    "setuptools",
    "snakemake",
    "torch",
    "tqdm",
    "seaborn",
    "matplotlib"
]
dynamic = ["version"]

[project.scripts]
clm = "clm.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools_scm]
write_to = "src/clm/_version.py"

[tool.setuptools.package-data]
clm = ["data/*.smi"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-sv"

[tool.black]
line-length = 80
target-version = ["py310"]

[project.optional-dependencies]
dev = [
    "build",
    "coverage",
    "coveralls",
    "myst-parser",
    "pre-commit",
    "pytest",
    "sphinx",
    "sphinxcontrib-bibtex",
    "sphinx_rtd_theme",
    "twine"
]
